--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <!-- Header part end-->
 
         <!-- banner part start-->
-        <section class="banner_part">
+        <!-- <section class="banner_part">
             <div class="container">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-lg-6 col-md-8">
@@ -103,7 +103,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- banner part start-->
 
         <!--::client logo part end::-->
