--- a/index.html
+++ b/index.html
@@ -87,23 +87,19 @@
         <!-- Header part end-->
 
         <!-- banner part start-->
-        <!-- <section class="banner_part">
+        <section class="banner_part">
             <div class="container">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-lg-6 col-md-8">
                         <div class="banner_text">
                             <div class="banner_text_iner">
-                                
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                                    sed do eiusmod tempor incididunt ut labore et dolore
-                                    magna aliqua. Quis ipsum </p>
                                 <a href="#" class="btn_1">Watch Tutorial</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
         <!-- banner part start-->
 
         <!--::client logo part end::-->
