--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
-                            <a class="navbar-brand" href="index.html"> <img src="img/GotGame.png" alt="logo"> </a>
+                            <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"> </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                 aria-expanded="false" aria-label="Toggle navigation">
@@ -267,7 +267,7 @@
                             <div class="row justify-content-center align-items-center h-100">
                                 <div class="col-lg-6">
                                     <div class="single_war_text text-center">
-                                        <img src="img/favicon.png" alt="">
+                                        <img src="img/GotFavicon.png" alt="">
                                         <h4>Open War chalange</h4>
                                         <p>27 june , 2020</p>
                                         <a href="#">view fight</a>
@@ -336,7 +336,7 @@
                             <div class="row justify-content-center align-items-center h-100">
                                 <div class="col-lg-6">
                                     <div class="single_war_text text-center">
-                                        <img src="img/favicon.png" alt="">
+                                        <img src="img/GotFavicon.png" alt="">
                                         <h4>Open War chalange</h4>
                                         <p>27 june , 2020</p>
                                         <a href="#">view fight</a>
