--- a/callToAction.html
+++ b/callToAction.html
@@ -45,15 +45,15 @@
                   <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="fighter.html">fighter</a>
+                  <a class="nav-link" href="ourMission.html">Our Mission</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="team.html">team</a>
+                  <a class="nav-link" href="ourGames.html">Our Games</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown" role="button"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Blog
+                    Technologies
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="blog.html"> blog</a>
@@ -63,18 +63,17 @@
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown1" role="button"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    pages
+                    Innovations
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
                     <a class="dropdown-item" href="elements.html">Elements</a>
                   </div>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
+                  <a class="nav-link" href="callToAction.html">Call To Action</a>
                 </li>
               </ul>
             </div>
-            <a href="#" class="btn_1 d-none d-sm-block">Install Now</a>
           </nav>
         </div>
       </div>
