--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <header class="main_menu single_page_menu">
             <div class="container">
                 <div class="row align-items-center">
+
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
                             <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"> </a>
@@ -56,7 +57,7 @@
                                         <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown"
                                             role="button" data-toggle="dropdown" aria-haspopup="true"
                                             aria-expanded="false">
-                                            Blog
+                                            Technologies
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                             <a class="dropdown-item" href="blog.html"> blog</a>
@@ -67,18 +68,28 @@
                                         <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown1"
                                             role="button" data-toggle="dropdown" aria-haspopup="true"
                                             aria-expanded="false">
-                                            pages
+                                            Innovations
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
                                             <a class="dropdown-item" href="elements.html">Elements</a>
                                         </div>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="contact.html">Contact</a>
+                                        <a class="nav-link" href="callToAction.html">Call To Action</a>
                                     </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="careers.html">Careers</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="ourTeam.html">Our Team</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="aboutUs.html">About Us</a>
+                                    </li>
+
+
                                 </ul>
                             </div>
-                            <a href="#" class="btn_1 d-none d-sm-block">Install Now</a>
                         </nav>
                     </div>
                 </div>
