--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-12">
                         <div class="client_logo_slider owl-carousel d-flex justify-content-between">
-                            <div class="single_client_logo">
+                            <!-- <div class="single_client_logo">
                                 <img src="img/client_logo/client_logo_1.png" alt="">
                             </div>
                             <div class="single_client_logo">
@@ -139,7 +139,7 @@
                             </div>
                             <div class="single_client_logo">
                                 <img src="img/client_logo/client_logo_2.png" alt="">
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
