added links in every page, added game images in our games

--- a/index.html
+++ b/index.html
@@ -75,9 +75,6 @@
                                         </div>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="callToAction.html">Call To Action</a>
-                                    </li>
-                                    <li class="nav-item">
                                         <a class="nav-link" href="careers.html">Careers</a>
                                     </li>
                                     <li class="nav-item">
@@ -86,8 +83,6 @@
                                     <li class="nav-item">
                                         <a class="nav-link" href="aboutUs.html">About Us</a>
                                     </li>
-
-
                                 </ul>
                             </div>
                         </nav>
@@ -158,7 +153,7 @@
                     </div>
                     <div class="col-md-7 col-lg-6 col-xl-5">
                         <div class="about_us_text">
-                            <h2>Find out about us in history</h2>
+                            <h2>Redefining Gaming, One Experience at a Time </h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing
                                 elit sed do eiusmod tempor incididunt ut labore et
                                 dolore magna aliqua. </p>
@@ -177,14 +172,14 @@
                 <div class="row align-items-center justify-content-between">
                     <div class="col-md-2 offset-lg-2 offset-sm-1">
                         <div class="live_stareams_text">
-                            <h2>live <br> stareams</h2>
-                            <div class="btn_1">install now</div>
+                            <h2>Our <br> Games</h2>
+                            <div class="btn_1">Play Games</div>
                         </div>
                     </div>
                     <div class="col-md-7 offset-sm-1">
                         <div class="live_stareams_slide owl-carousel">
                             <div class="live_stareams_slide_img">
-                                <img src="img/live_streams_1.png" alt="">
+                                <img src="img/ArcAngels .png" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -193,7 +188,7 @@
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
-                                <img src="img/live_streams_2.png" alt="">
+                                <img src="img/ArcAngels1.png" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -202,7 +197,7 @@
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
-                                <img src="img/live_streams_1.png" alt="">
+                                <img src="img/ArcAngels .png" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -211,7 +206,7 @@
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
-                                <img src="img/live_streams_2.png" alt="">
+                                <img src="img/ArcAngels1.png" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -220,7 +215,7 @@
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
-                                <img src="img/live_streams_1.png" alt="">
+                                <img src="img/ArcAngels .png" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -229,7 +224,7 @@
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
-                                <img src="img/live_streams_2.png" alt="">
+                                <img src="img/ArcAngels1.png" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -238,7 +233,7 @@
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
-                                <img src="img/live_streams_1.png" alt="">
+                                <img src="img/ArcAngels .png" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -247,7 +242,7 @@
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
-                                <img src="img/live_streams_2.png" alt="">
+                                <img src="img/ArcAngels1.png" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
