--- a/technologies.html
+++ b/technologies.html
@@ -71,7 +71,13 @@
                                     </div>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="callToAction.html">call To Action</a>
+                                    <a class="nav-link" href="careers.html">Careers</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="ourTeam.html">Our Team</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="aboutUs.html">About Us</a>
                                 </li>
                             </ul>
                         </div>
