--- a/ourMission.html
+++ b/ourMission.html
@@ -74,7 +74,13 @@
                                         </div>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="callToAction.html">Call To Action</a>
+                                        <a class="nav-link" href="careers.html">Careers</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="ourTeam.html">Our Team</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="aboutUs.html">About Us</a>
                                     </li>
                                 </ul>
                             </div>
