commented: logos, added games in our games

--- a/ourGames.html
+++ b/ourGames.html
@@ -98,7 +98,6 @@
                     <div class="col-lg-12">
                         <div class="breadcrumb_iner text-center">
                             <div class="breadcrumb_iner_item">
-                                <h2>Team Matches</h2>
                             </div>
                         </div>
                     </div>
@@ -109,7 +108,7 @@
 
         <!--::client logo part end::-->
         <section class="client_logo">
-            <div class="container">
+            <!-- <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12">
                         <div class="client_logo_slider owl-carousel d-flex justify-content-between">
@@ -137,7 +136,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </section>
         <!--::client logo part end::-->
 
@@ -147,7 +146,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="section_tittle text-center">
-                            <h2>Latest War Fight</h2>
+                            
                         </div>
                     </div>
                 </div>
@@ -158,13 +157,13 @@
                                 <div class="col-lg-6">
                                     <div class="single_war_text text-center">
                                         <img src="img/favicon.png" alt="">
-                                        <h4>Open War chalange</h4>
+                                        <!-- <h4>Open War chalange</h4>
                                         <p>27 june , 2020</p>
-                                        <a href="#">view fight</a>
+                                        <a href="#">view fight</a> -->
                                         <div class="war_text_item d-flex justify-content-around align-items-center">
-                                            <img src="img/war_logo_1.png" alt="">
+                                            <!-- <img src="img/war_logo_1.png" alt="">
                                             <h2>190<span>vs</span>189</h2>
-                                            <img src="img/war_logo_2.png" alt="">
+                                            <img src="img/war_logo_2.png" alt=""> -->
                                         </div>
 
                                     </div>
@@ -173,7 +172,7 @@
                             <a href="#" class="btn_2">Watch Tutorial</a>
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <!-- <div class="col-lg-6">
                         <div class="latest_war_list">
                             <div class="single_war_text">
                                 <div class="war_text_item d-flex justify-content-around align-items-center">
@@ -237,8 +236,8 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <a href="#" class="btn_2">Watch Tutorial</a>
+                            </div> -->
+                            <a href="#" class="btn_2"></a>
                         </div>
                     </div>
                 </div>
@@ -252,14 +251,14 @@
                 <div class="row align-items-center justify-content-between">
                     <div class="col-md-3 offset-lg-1 offset-sm-1">
                         <div class="live_stareams_text">
-                            <h2>live <br> stareams</h2>
+                            <h2>Our  <br> Games</h2>
                             <div class="btn_1">install now</div>
                         </div>
                     </div>
                     <div class="col-md-7 offset-sm-1">
                         <div class="live_stareams_slide owl-carousel">
                             <div class="live_stareams_slide_img">
-                                <img src="img/live_streams_1.png" alt="">
+                                <img src="img/ArcAngels .png" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -268,7 +267,7 @@
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
-                                <img src="img/live_streams_2.png" alt="">
+                                <img src="img/ArcAngels1.png" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -277,7 +276,7 @@
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
-                                <img src="img/live_streams_1.png" alt="">
+                                <img src="img/ArcAngels .png" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -286,7 +285,7 @@
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
-                                <img src="img/live_streams_2.png" alt="">
+                                <img src="img/ArcAngels1.png" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -295,7 +294,7 @@
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
-                                <img src="img/live_streams_1.png" alt="">
+                                <img src="img/ArcAngels .png" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -304,7 +303,7 @@
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
-                                <img src="img/live_streams_2.png" alt="">
+                                <img src="img/ArcAngels1.png" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -313,7 +312,7 @@
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
-                                <img src="img/live_streams_1.png" alt="">
+                                <img src="img/ArcAngels .png" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -322,7 +321,7 @@
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
-                                <img src="img/live_streams_2.png" alt="">
+                                <img src="img/ArcAngels1.png" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
