--- a/ourMission.html
+++ b/ourMission.html
@@ -98,7 +98,7 @@
                     <div class="col-lg-12">
                         <div class="breadcrumb_iner text-center">
                             <div class="breadcrumb_iner_item">
-                                <h2>Fighter</h2>
+                                
                             </div>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
 
         <!--::client logo part end::-->
         <section class="client_logo">
-            <div class="container">
+            <!-- <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12">
                         <div class="client_logo_slider owl-carousel d-flex justify-content-between">
@@ -137,13 +137,13 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </section>
         <!--::client logo part end::-->
 
         <!-- gallery_part part start-->
         <section class="gallery_part section_padding">
-            <div class="container">
+            <!-- <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-5">
                         <div class="section_tittle text-center">
@@ -235,13 +235,13 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </section>
         <!-- gallery_part part end-->
 
         <!-- use sasu part end-->
         <section class="upcomming_war">
-            <div class="container">
+            <!-- <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="section_tittle text-center">
@@ -262,7 +262,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </section>
         <!-- use sasu part end-->
 
