commented few sections in home page

--- a/index.html
+++ b/index.html
@@ -258,13 +258,13 @@
         <!--::about_us part end::-->
 
         <!-- use sasu part end-->
-        <section class="Latest_War">
+        <!-- <section class="Latest_War">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="section_tittle text-center">
-                            <h2>Latest War Fight</h2>
-                        </div>
+                            <!-- <h2>Latest War Fight</h2> -->
+                        <!-- </div>
                     </div>
                 </div>
                 <div class="row justify-content-center align-items-center">
@@ -359,7 +359,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> --> -->
         <!-- use sasu part end-->
 
         <!-- gallery_part part start-->
@@ -368,7 +368,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-5">
                         <div class="section_tittle text-center">
-                            <h2>All Fighter</h2>
+                            <h2>Our Games</h2>
                         </div>
                     </div>
                 </div>
@@ -461,7 +461,7 @@
         <!-- gallery_part part end-->
 
         <!-- use sasu part end-->
-        <section class="upcomming_war">
+        <!-- <section class="upcomming_war">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
@@ -484,11 +484,11 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- use sasu part end-->
 
         <!-- pricing part start-->
-        <section class="pricing_part padding_top">
+        <!-- <section class="pricing_part padding_top">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
@@ -536,7 +536,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- pricing part end-->
 
         <!--::footer_part start::-->
