--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
         <!-- banner part start-->
 
         <!--::client logo part end::-->
-        <section class="client_logo">
+        <!-- <section class="client_logo">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12">
                         <div class="client_logo_slider owl-carousel d-flex justify-content-between">
-                            <!-- <div class="single_client_logo">
+                            <div class="single_client_logo">
                                 <img src="img/client_logo/client_logo_1.png" alt="">
                             </div>
                             <div class="single_client_logo">
@@ -134,12 +134,12 @@
                             </div>
                             <div class="single_client_logo">
                                 <img src="img/client_logo/client_logo_2.png" alt="">
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!--::client logo part end::-->
 
         <!-- about_us part start-->
@@ -148,7 +148,7 @@
                 <div class="row align-items-center justify-content-between">
                     <div class="col-md-5 col-lg-6 col-xl-6">
                         <div class="learning_img">
-                            <img src="img/about_img.png" alt="">
+                            <img src="img/new/arcangels_1.jpeg" alt="">
                         </div>
                     </div>
                     <div class="col-md-7 col-lg-6 col-xl-5">
@@ -179,7 +179,7 @@
                     <div class="col-md-7 offset-sm-1">
                         <div class="live_stareams_slide owl-carousel">
                             <div class="live_stareams_slide_img">
-                                <img src="img/ArcAngels .png" alt="">
+                                <img src="img/new/ballgame_1.jpeg" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -188,7 +188,7 @@
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
-                                <img src="img/ArcAngels1.png" alt="">
+                                <img src="img/new/arcangels_2.jpeg" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -197,7 +197,7 @@
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
-                                <img src="img/ArcAngels .png" alt="">
+                                <img src="img/new/ballgame_1.jpeg" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -206,7 +206,7 @@
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
-                                <img src="img/ArcAngels1.png" alt="">
+                                <img src="img/new/arcangels_2.jpeg" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -215,7 +215,7 @@
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
-                                <img src="img/ArcAngels .png" alt="">
+                                <img src="img/new/ballgame_1.jpeg" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -224,7 +224,7 @@
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
-                                <img src="img/ArcAngels1.png" alt="">
+                                <img src="img/new/arcangels_2.jpeg" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -233,7 +233,7 @@
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
-                                <img src="img/ArcAngels .png" alt="">
+                                <img src="img/new/ballgame_1.jpeg" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -242,7 +242,7 @@
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
-                                <img src="img/ArcAngels1.png" alt="">
+                                <img src="img/new/arcangels_2.jpeg" alt="">
                                 <div class="extends_video">
                                     <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI">
@@ -263,7 +263,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="section_tittle text-center">
-                            <!-- <h2>Latest War Fight</h2> -->
+                           /<h2>Latest War Fight</h2> -->
                         <!-- </div>
                     </div>
                 </div>
@@ -359,7 +359,7 @@
                     </div>
                 </div>
             </div>
-        </section> --> -->
+        </section> --> 
         <!-- use sasu part end-->
 
         <!-- gallery_part part start-->
@@ -377,9 +377,9 @@
                         <div class="gallery_part_item">
                             <div class="grid">
                                 <div class="grid-sizer"></div>
-                                <a href="img/gallery/gallery_item_1.png"
+                                <a href="img/new/arcangels_3.jpeg"
                                     class="grid-item bg_img img-gal grid-item--height-1"
-                                    style="background-image: url('img/gallery/gallery_item_1.png')">
+                                    style="background-image: url('img/new/arcangels_3.jpeg')">
                                     <div class="single_gallery_item">
                                         <div class="single_gallery_item_iner">
                                             <div class="gallery_item_text">
@@ -388,8 +388,8 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="img/gallery/gallery_item_2.png" class="grid-item bg_img img-gal"
-                                    style="background-image: url('img/gallery/gallery_item_2.png')">
+                                <a href="img/new/ballgame_2.jpeg" class="grid-item bg_img img-gal"
+                                    style="background-image: url('img/new/ballgame_2.jpeg')">
                                     <div class="single_gallery_item">
                                         <div class="single_gallery_item_iner">
                                             <div class="gallery_item_text">
@@ -398,8 +398,8 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="img/gallery/gallery_item_3.png" class="grid-item bg_img img-gal"
-                                    style="background-image: url('img/gallery/gallery_item_3.png')">
+                                <a href="img/new/arcangels_4.jpg" class="grid-item bg_img img-gal"
+                                    style="background-image: url('img/new/arcangels_4.jpg')">
                                     <div class="single_gallery_item">
                                         <div class="single_gallery_item_iner">
                                             <div class="gallery_item_text">
@@ -408,9 +408,9 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="img/gallery/gallery_item_5.png"
+                                <a href="img/new/ballgame_3.jpeg"
                                     class="grid-item bg_img img-gal grid-item--height-2"
-                                    style="background-image: url('img/gallery/gallery_item_5.png')">
+                                    style="background-image: url('img/new/ballgame_3.jpeg')">
                                     <div class="single_gallery_item">
                                         <div class="single_gallery_item_iner">
                                             <div class="gallery_item_text">
@@ -419,9 +419,9 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="img/gallery/gallery_item_7.png"
+                                <a href="img/new/ballgame_4.jpeg"
                                     class="grid-item bg_img img-gal grid-item--height-2"
-                                    style="background-image: url('img/gallery/gallery_item_7.png')">
+                                    style="background-image: url('img/new/ballgame_4.jpeg')">
                                     <div class="single_gallery_item">
                                         <div class="single_gallery_item_iner">
                                             <div class="gallery_item_text">
@@ -430,9 +430,9 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="img/gallery/gallery_item_6.png"
+                                <a href="img/new/arcangels_5.jpeg"
                                     class="grid-item bg_img img-gal grid-item--width-1"
-                                    style="background-image: url('img/gallery/gallery_item_6.png')">
+                                    style="background-image: url('img/new/arcangels_5.jpeg')">
                                     <div class="single_gallery_item">
                                         <div class="single_gallery_item_iner">
                                             <div class="gallery_item_text">
@@ -441,9 +441,9 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="img/gallery/gallery_item_4.png"
+                                <a href="img/new/arcangels_6.jpg"
                                     class="grid-item bg_img img-gal sm_weight  grid-item--height-1"
-                                    style="background-image: url('img/gallery/gallery_item_4.png')">
+                                    style="background-image: url('img/new/arcangels_6.jpg')">
                                     <div class="single_gallery_item">
                                         <div class="single_gallery_item_iner">
                                             <div class="gallery_item_text">
