--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/ballgame_1.jpeg" alt="">
                                 <div class="extends_video">
-                                    <a id="play-video_1" class="video-play-button popup-youtube"
-                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI">
+                                    <!-- <a id="play-video_1" class="video-play-button popup-youtube"
+                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
                                         <span class="fas fa-play"></span>
                                     </a>
                                 </div>
@@ -190,8 +190,8 @@
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/arcangels_2.jpeg" alt="">
                                 <div class="extends_video">
-                                    <a id="play-video_1" class="video-play-button popup-youtube"
-                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI">
+                                    <!-- <a id="play-video_1" class="video-play-button popup-youtube"
+                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
                                         <span class="fas fa-play"></span>
                                     </a>
                                 </div>
@@ -199,8 +199,8 @@
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/ballgame_1.jpeg" alt="">
                                 <div class="extends_video">
-                                    <a id="play-video_1" class="video-play-button popup-youtube"
-                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI">
+                                    <!-- <a id="play-video_1" class="video-play-button popup-youtube"
+                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
                                         <span class="fas fa-play"></span>
                                     </a>
                                 </div>
@@ -208,8 +208,8 @@
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/arcangels_2.jpeg" alt="">
                                 <div class="extends_video">
-                                    <a id="play-video_1" class="video-play-button popup-youtube"
-                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI">
+                                    <!-- <a id="play-video_1" class="video-play-button popup-youtube"
+                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
                                         <span class="fas fa-play"></span>
                                     </a>
                                 </div>
@@ -217,8 +217,8 @@
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/ballgame_1.jpeg" alt="">
                                 <div class="extends_video">
-                                    <a id="play-video_1" class="video-play-button popup-youtube"
-                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI">
+                                    <!-- <a id="play-video_1" class="video-play-button popup-youtube"
+                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
                                         <span class="fas fa-play"></span>
                                     </a>
                                 </div>
@@ -226,8 +226,8 @@
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/arcangels_2.jpeg" alt="">
                                 <div class="extends_video">
-                                    <a id="play-video_1" class="video-play-button popup-youtube"
-                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI">
+                                    <!-- <a id="play-video_1" class="video-play-button popup-youtube"
+                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
                                         <span class="fas fa-play"></span>
                                     </a>
                                 </div>
@@ -235,8 +235,8 @@
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/ballgame_1.jpeg" alt="">
                                 <div class="extends_video">
-                                    <a id="play-video_1" class="video-play-button popup-youtube"
-                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI">
+                                    <!-- <a id="play-video_1" class="video-play-button popup-youtube"
+                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
                                         <span class="fas fa-play"></span>
                                     </a>
                                 </div>
@@ -244,8 +244,8 @@
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/arcangels_2.jpeg" alt="">
                                 <div class="extends_video">
-                                    <a id="play-video_1" class="video-play-button popup-youtube"
-                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI">
+                                    <!-- <a id="play-video_1" class="video-play-button popup-youtube"
+                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
                                         <span class="fas fa-play"></span>
                                     </a>
                                 </div>
