--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         <div class="live_stareams_slide owl-carousel">
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/ballgame_1.jpeg" alt="">
-                                <div class="extends_video">
+                                <!-- <div class="extends_video"> -->
                                     <!-- <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
                                         <span class="fas fa-play"></span>
@@ -189,7 +189,7 @@
                             </div>
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/arcangels_2.jpeg" alt="">
-                                <div class="extends_video">
+                                <!-- <div class="extends_video"> -->
                                     <!-- <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
                                         <span class="fas fa-play"></span>
@@ -198,7 +198,7 @@
                             </div>
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/ballgame_1.jpeg" alt="">
-                                <div class="extends_video">
+                                <!-- <div class="extends_video"> -->
                                     <!-- <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
                                         <span class="fas fa-play"></span>
@@ -207,7 +207,7 @@
                             </div>
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/arcangels_2.jpeg" alt="">
-                                <div class="extends_video">
+                                <!-- <div class="extends_video"> -->
                                     <!-- <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
                                         <span class="fas fa-play"></span>
@@ -216,7 +216,7 @@
                             </div>
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/ballgame_1.jpeg" alt="">
-                                <div class="extends_video">
+                                <!-- <div class="extends_video"> -->
                                     <!-- <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
                                         <span class="fas fa-play"></span>
@@ -225,7 +225,7 @@
                             </div>
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/arcangels_2.jpeg" alt="">
-                                <div class="extends_video">
+                                <!-- <div class="extends_video"> -->
                                     <!-- <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
                                         <span class="fas fa-play"></span>
@@ -234,7 +234,7 @@
                             </div>
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/ballgame_1.jpeg" alt="">
-                                <div class="extends_video">
+                                <!-- <div class="extends_video"> -->
                                     <!-- <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
                                         <span class="fas fa-play"></span>
@@ -243,7 +243,7 @@
                             </div>
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/arcangels_2.jpeg" alt="">
-                                <div class="extends_video">
+                                <!-- <div class="extends_video"> -->
                                     <!-- <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
                                         <span class="fas fa-play"></span>
