--- a/index.html
+++ b/index.html
@@ -180,62 +180,62 @@
                         <div class="live_stareams_slide owl-carousel">
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/ballgame_1.jpeg" alt="">
-                                <!-- <div class="extends_video"> -->
-                                    <!-- <a id="play-video_1" class="video-play-button popup-youtube"
-                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
+                                <div class="extends_video">
+                                    <a id="play-video_1" class="video-play-button popup-youtube"
+                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI">
                                         <span class="fas fa-play"></span>
                                     </a>
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/arcangels_2.jpeg" alt="">
-                                <!-- <div class="extends_video"> -->
-                                    <!-- <a id="play-video_1" class="video-play-button popup-youtube"
-                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
+                                <div class="extends_video">
+                                    <a id="play-video_1" class="video-play-button popup-youtube"
+                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI">
                                         <span class="fas fa-play"></span>
                                     </a>
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/ballgame_1.jpeg" alt="">
-                                <!-- <div class="extends_video"> -->
-                                    <!-- <a id="play-video_1" class="video-play-button popup-youtube"
-                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
+                                <div class="extends_video">
+                                    <a id="play-video_1" class="video-play-button popup-youtube"
+                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI">
                                         <span class="fas fa-play"></span>
                                     </a>
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/arcangels_2.jpeg" alt="">
-                                <!-- <div class="extends_video"> -->
-                                    <!-- <a id="play-video_1" class="video-play-button popup-youtube"
-                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
+                                <div class="extends_video">
+                                    <a id="play-video_1" class="video-play-button popup-youtube"
+                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI">
                                         <span class="fas fa-play"></span>
                                     </a>
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/ballgame_1.jpeg" alt="">
-                                <!-- <div class="extends_video"> -->
-                                    <!-- <a id="play-video_1" class="video-play-button popup-youtube"
-                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
+                                <div class="extends_video">
+                                    <a id="play-video_1" class="video-play-button popup-youtube"
+                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI">
                                         <span class="fas fa-play"></span>
                                     </a>
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/arcangels_2.jpeg" alt="">
-                                <!-- <div class="extends_video"> -->
-                                    <!-- <a id="play-video_1" class="video-play-button popup-youtube"
-                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
+                                <div class="extends_video">
+                                    <a id="play-video_1" class="video-play-button popup-youtube"
+                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI">
                                         <span class="fas fa-play"></span>
                                     </a>
                                 </div>
                             </div>
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/ballgame_1.jpeg" alt="">
-                                <!-- <div class="extends_video"> -->
-                                    <!-- <a id="play-video_1" class="video-play-button popup-youtube"
+                                <div class="extends_video"> -->
+                                    <a id="play-video_1" class="video-play-button popup-youtube"
                                         href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
                                         <span class="fas fa-play"></span>
                                     </a>
@@ -243,9 +243,9 @@
                             </div>
                             <div class="live_stareams_slide_img">
                                 <img src="img/new/arcangels_2.jpeg" alt="">
-                                <!-- <div class="extends_video"> -->
-                                    <!-- <a id="play-video_1" class="video-play-button popup-youtube"
-                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI"> -->
+                                <div class="extends_video">
+                                    <a id="play-video_1" class="video-play-button popup-youtube"
+                                        href="https://www.youtube.com/watch?v=pBFQdxA-apI">
                                         <span class="fas fa-play"></span>
                                     </a>
                                 </div>
