background position changed to top

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
         <!--::about_us part start::-->
         <section class="live_stareams padding_bottom">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-md-2 offset-lg-2 offset-sm-1">
                         <div class="live_stareams_text">
