--- a/index.html
+++ b/index.html
@@ -140,12 +140,10 @@
                     </div>
                     <div class="col-md-7 col-lg-6 col-xl-5">
                         <div class="about_us_text">
-                            <h2>Redefining Gaming, One Experience at a Time </h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing
-                                elit sed do eiusmod tempor incididunt ut labore et
-                                dolore magna aliqua. </p>
-                            <a href="#" class="btn_1">Install Now</a>
-                            <a href="#" class="btn_1">Watch Tutorial</a>
+                            <h2>GOT </h2>
+                            <p>GOT Games is a new studio with industry vets driving a more efficient and successful methodology to build games. Our main focus is on new and unique game mechanics that are FUN. We build prototypes to test out these new mechanics. Then we use AI tools to create everything from assets to code to build our games more cost effectively with smaller teams and overhead maximizing profits for our investors. </p>
+                            <!-- <a href="#" class="btn_1">Install Now</a>
+                            <a href="#" class="btn_1">Watch Tutorial</a> -->
                         </div>
                     </div>
                 </div>
@@ -250,7 +248,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-5">
                         <div class="section_tittle text-center">
-                            <h2>Our Games</h2>
+                            <h2>Ball Game</h2>
                         </div>
                     </div>
                 </div>
@@ -347,7 +345,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-5">
                         <div class="section_tittle text-center">
-                            <h2>Our Games</h2>
+                            <h2>Arc Angels</h2>
                         </div>
                     </div>
                 </div>
@@ -367,8 +365,8 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="img/new/ballgame_2.jpeg" class="grid-item bg_img img-gal"
-                                    style="background-image: url('img/new/ballgame_2.jpeg')">
+                                <a href="img/new/arcangels_7.jpg" class="grid-item bg_img img-gal"
+                                    style="background-image: url('img/new/arcangels_7.jpg')">
                                     <div class="single_gallery_item">
                                         <div class="single_gallery_item_iner">
                                             <div class="gallery_item_text">
@@ -387,9 +385,9 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="img/new/ballgame_3.jpeg"
+                                <a href="img/new/arcangels_8.jpg"
                                     class="grid-item bg_img img-gal grid-item--height-2"
-                                    style="background-image: url('img/new/ballgame_3.jpeg')">
+                                    style="background-image: url('img/new/arcangels_8.jpg')">
                                     <div class="single_gallery_item">
                                         <div class="single_gallery_item_iner">
                                             <div class="gallery_item_text">
@@ -398,9 +396,9 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="img/new/ballgame_4.jpeg"
+                                <a href="img/new/arcangels_9.png"
                                     class="grid-item bg_img img-gal grid-item--height-2"
-                                    style="background-image: url('img/new/ballgame_4.jpeg')">
+                                    style="background-image: url('img/new/arcangels_9.png')">
                                     <div class="single_gallery_item">
                                         <div class="single_gallery_item_iner">
                                             <div class="gallery_item_text">
@@ -409,9 +407,9 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="img/new/arcangels_5.jpeg"
+                                <a href="img/new/arcangels_11.jpeg"
                                     class="grid-item bg_img img-gal grid-item--width-1"
-                                    style="background-image: url('img/new/arcangels_5.jpeg')">
+                                    style="background-image: url('img/new/arcangels_11.jpeg')">
                                     <div class="single_gallery_item">
                                         <div class="single_gallery_item_iner">
                                             <div class="gallery_item_text">
@@ -444,7 +442,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-5">
                         <div class="section_tittle text-center">
-                            <h2>Our Games</h2>
+                            <h2>Experience</h2>
                         </div>
                     </div>
                 </div>
